# buildpy

./: .gitignore  Makefile  README.md  changes.diff  pybuild.py
builder/: Makefile
builder/builder/: __main__.py  config.py  core.py  factory.py
builder/resources/patch/3.11/: setup-static-min3.local
buildpy/: CHANGELOG.md  CMakeLists.txt  Makefile  README.md  buildpy.py
buildpy/patch/: Setup.stdlib  framework.max  framework.mid  home.local  shared.local  shared.max  shared.mid  static.local  static.max  static.mid  static.tiny  tinydb.local
buildpy/projects/: CMakeLists.txt
buildpy/projects/pybind/: CMakeLists.pybind11.txt  CMakeLists.txt
buildpy/projects/simple/: CMakeLists.txt
buildpy/src/: main2.cpp
buildpy/tests/: cfg  config.py  parse.py  static.local
c/buildpy/: Makefile  buildpy
c/buildpy/src/: builders.c  buildpy.h  config.c  config.h  config_data.c  config_logic.c  main.c  project.c  shell.c
cc/buildpy/: CMakeLists.txt  Makefile  README.md
cc/buildpy/include/: logy.h
cc/buildpy/src/: buildpy.cpp  buildpy.hpp  config.hpp
cc/tests/: Makefile
cxx/buildpy/: .gitignore  Makefile  README.md
cxx/buildpy/include/: logy.h  subprocess.h
cxx/buildpy/src/: buildpy.cpp  buildpy.hpp
cxx/tests/: Makefile  test_join_split_vec1.cpp  test_join_split_vec2.cpp  test_join_vec1.cpp  test_vec_args.cpp  test_virtual.cpp
go/buildpy/: .gitignore  CHANGELOG.md  DEVNOTES.md  Makefile  README.md  go.mod  go.sum  main.go
go/buildpy/cmd/: build.go  config.go  deps.go  package.go  root.go  sign.go
go/buildpy/internal/builder/: builder.go  builder_test.go
go/buildpy/internal/config/: config.go  config_test.go  helpers.go  helpers_test.go  template.go
go/buildpy/internal/models/: builder.go  dependency.go  project.go
go/buildpy/internal/shell/: shell.go  shell_test.go
go/tests/: slices.go
go/tests/test_copy/: demo  demo.go  demo2.go
hs/buildpy/: CHANGELOG.md  LICENSE  Makefile  README.md  buildpy  buildpy.cabal
hs/buildpy/app/: Build.hs  Builder.hs  Config.hs  Log.hs  Main.hs  Process.hs  Shell.hs  Utils.hs
hs/buildpy/app/Models/: Dependency.hs  Project.hs  Python.hs
hs/buildpy/exe/: Main.hs
hs/buildpy/src/: BuildPy.hs  Log.hs  Process.hs  Project.hs  Shell.hs  Types.hs  Utils.hs
hs/buildpy/src/Dependency/: Config.hs  Model.hs
hs/buildpy/src/Models/: Dependency.hs  Project.hs  Python.hs
hs/buildpy/src/Python/: Builder.hs  Config.hs  Model.hs
hs/tests/test_clean/: .gitignore  CHANGELOG.md  Makefile  test-clean  test-clean.cabal
hs/tests/test_clean/app/: Main.hs
hs/tests/test_clean/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
hs/tests/test_opts/: CHANGELOG.md  LICENSE  test-opts  test-opts.cabal
hs/tests/test_opts/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
hs/tests/test_opts/exe/: Main.hs
ml/buildpy/: .gitignore  Makefile  buildpy.opam  dune-project
ml/buildpy/lib/: builder.ml  config.ml  dependency.ml  dune  project.ml  shell.ml
ml/buildpy/test/: dune
patch/: README.md
py/builder/: README.md
py/builder/builder/: README.md  __main__.py  core.py  depend.py  utils.py
py/builder/resources/patch/3.12/: setup-shared.local
py/buildpy/: CHANGELOG.md  Makefile  README.md  buildpy.py  pyproject.toml
py/buildpy/src/: buildpy.py
py/buildpy/tests/: test_builder.py  test_project.py  test_shellcmd.py
py/misc/: build_numpy.py
py/pybuild/: pybuild.py
py/pybuild/tests/static/: build.sh
pybuild/: README.md  pybuild.py
pybuild/tests/static/: README  main.c
rs/: README.md
rs/buildpy/: Cargo.toml  Makefile  README.md  buildpy
rs/buildpy/src/: main.rs
rs/buildpy/src/builders/: api.rs  builder.rs  bz2.rs  deps.rs  mod.rs  openssl.rs  python.rs  ssl.rs  xz.rs
rs/buildpy/src/config/: defaults.rs  macros.rs  mod.rs  model.rs  project.rs
rs/buildpy/src/core/: api.rs  builder.rs  deps.rs  job.rs  mod.rs  project.rs
rs/buildpy/src/ops/: download.rs  log.rs  mod.rs  process.rs  shell.rs
rs/buildpy/src/shell/: mod.rs
rs/tests/: demo.rs  model_old.rs  test_lifetime.rs  test_macros.rs
sw/buildpy/: Makefile  Package.resolved  Package.swift  README.md
sw/buildpy/Sources/BuildPyLib/: BuildPyLib.swift  constants.swift  scratch.swift
sw/buildpy/Sources/BuildPyLib/core/: builders.swift  pyproject.swift  shell.swift
sw/buildpy/Sources/BuildPyLib/protocols/: builder.swift  project.swift  shellcmd.swift
sw/buildpy/Sources/CLib/: clib.c
sw/buildpy/Sources/CLib/include/: CLib.modulemap  clib.h
sw/buildpy/Sources/buildpy/: buildpy.swift  scratch.swift  shell.swift
sw/buildpy/Sources/buildpy/models/: shell.swift
sw/buildpy/Sources/buildpy/protocols/: config.swift  shellcmd.swift
sw/buildpy/Sources/protocols/: config.swift
sw/buildpy/Tests/BuildPyTests/: BuildPyTests.swift
sw/tests/app/: Package.swift  app
sw/tests/app/Sources/: main.swift
sw/tests/logtest/: Package.swift
sw/tests/logtest/Sources/: main.swift
swift/buildpy/: Makefile  Package.resolved  Package.swift  buildpy
swift/buildpy/Sources/: buildpy.swift  constants.swift  shell.swift
swift/buildpy/Sources/protocols/: builder.swift  config.swift  project.swift
tests/static/: build.sh
zg/buildpy/: Makefile  build.zig  build.zig.zon
zg/buildpy/src/: config.zig  errors.zig  log.zig  main.zig  platform.zig  project.zig  root.zig  shell.zig
zg/buildpy/src/builders/: builder.zig  bzip2.zig  openssl.zig  python.zig  xz.zig
