cabal-version:      3.0

name:               buildpy

-- The package version.
-- See the Haskell package versioning policy (PVP) for standards
-- guiding when and how versions should be incremented.
-- https://pvp.haskell.org
-- PVP summary:     +-+------- breaking API changes
--                  | | +----- non-breaking API additions
--                  | | | +--- code changes with no API change
version:            0.1.0.0

synopsis:           Builds python3 from source

-- A longer description of the package.
-- description:

-- URL for the project homepage or repository.
homepage:           https://github.com/shakfu/pybuild


license:            MIT

license-file:       LICENSE

author:             shakfu

maintainer:         shakfu@me.org

-- A copyright notice.
-- copyright:
category:           Development
build-type:         Simple

-- Extra doc files to be distributed with the package, such as a CHANGELOG or a README.
extra-doc-files:    README.md 
                    CHANGELOG.md

-- Extra source files to be distributed with the package, such as examples, or a tutorial module.
-- extra-source-files:

common warnings
    ghc-options: -Wall -Wmissing-signatures

library
    -- Import common warning flags.
    import:           warnings

    -- Modules exported by the library.
    exposed-modules:  BuildPy,
                      Log,
                      Dependency.Config,
                      Dependency.Model,
                      Project,
                      Python.Builder,
                      Python.Config,
                      Python.Model,
                      Process,
                      Shell,
                      Types,
                      Utils

    -- Modules included in this library but not exported.
    other-modules:

    -- LANGUAGE extensions used by modules in this package.
    other-extensions: MultiWayIf, DeriveGeneric, OverloadedStrings

    -- Other library packages from which modules are imported.
    build-depends:    base ^>=4.18.3.0,
                      containers,
                      directory,
                      filepath,
                      filepattern,
                      pathwalk,
                      process,
                      time,
                      aeson,
                      yaml,
                      bytestring,
                      text,
                      optparse-applicative,

    -- Directories containing source files.
    hs-source-dirs:   src

    -- Base language which the package is written in.
    default-language: Haskell2010

executable buildpy
    -- Import common warning flags.
    import:           warnings

    -- .hs or .lhs file containing the Main module.
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    -- Other library packages from which modules are imported.
    build-depends:
        base ^>=4.18.3.0,
        buildpy,
        optparse-applicative,
        aeson,
        yaml,
        bytestring,
        text,
        directory

    -- Directories containing source files.
    hs-source-dirs:   exe

    -- Base language which the package is written in.
    default-language: Haskell2010

test-suite buildpy-test
    -- Import common warning flags.
    import:           warnings

    -- Base language which the package is written in.
    default-language: Haskell2010

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    -- The interface type and version of the test suite.
    type:             exitcode-stdio-1.0

    -- Directories containing source files.
    hs-source-dirs:   test

    -- The entrypoint to the test suite.
    main-is:          Main.hs

    -- Test dependencies.
    build-depends:
        base ^>=4.18.3.0,
        buildpy
