(lang dune 3.19)

(name buildpy)

(generate_opam_files true)

(source
 (github shakfu/buildpy))

(authors "Shakeeb Alireza <sa@example.com>")

(maintainers "Maintainer Name <maintainer@example.com>")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name buildpy)
 (synopsis "Buidl relocatable python")
 (description "A longer description")
 (depends ocaml)
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
