[package]
name = "buildpy"
version = "0.1.0"
edition = "2021"


# optional deps: flate2, downloader

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
downloader = "0.2.7"
flate2 = "1.0.28"
globset = "=0.4.14"
log-panics = "2.1.0"
logging_timer = "=1.1.1"
semver = "1.0.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.114"
simplelog = { version = "^0.12.2", features = ["paris"] }
walkdir = "=2.5.0"
