[package]
name = "buildpy"
version = "0.1.0"
edition = "2021"


# optional deps: flate2, downloader

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
downloader = "0.2.8"
flate2 = "1.1.2"
globset = "=0.4.16"
log-panics = "2.1.0"
logging_timer = "=1.1.1"
semver = "1.0.26"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
simplelog = { version = "^0.12.2", features = ["paris"] }
walkdir = "=2.5.0"
